--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,9 @@
               <a href="cars.html" title="car-rental-cars-page">Cars</a>
             </li>
             <li>
-              <a href="location.html" title="car-rental-location-page">Locations</a>
+              <a href="locations.html" title="car-rental-location-page"
+                >Locations</a
+              >
             </li>
             <li>
               <a href="about.html" title="car-rental-about-page">About</a>
