--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <!--header-->
-<div class="grid-x grid-padding-x">
+<div class="grid-x">
   <div class="large-12 medium-12 small-12 cell">
     <header id="header">
       <div
