update css - update packages - update html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
         <button type="button" class="menu-icon" data-toggle></button>
       </div>
 
-      <div class="top-bar" data-animate="hinge-in-from-top spin-out">
+      <div class="top-bar">
         <div class="top-bar-left">
           <ul class="title-area">
             <li class="name">
@@ -20,7 +20,10 @@
         </div>
 
         <nav id="primary_nav">
-          <ul class="vertical medium-horizontal menu">
+          <ul
+            class="vertical medium-horizontal menu"
+            data-animate="hinge-in-from-top spin-out"
+          >
             <li class="active">
               <a href="index.html" title="car-rental-home-page">Home</a>
             </li>
