add abide to forms - interchnage to images - update css

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -2,7 +2,10 @@ $color: #ffffff;
 $color1: #33ccff;
 $color2: #6ccff7;
 $color3: #3399cc;
-$color15: #06f;
+
+$color3a: #3e7d9a;
+$color3b: #0b4763;
+
 $color4: #cccccc;
 $color5: #999999;
 $color6: #666;
@@ -10,5 +13,17 @@ $color7: #000000;
 $color8: #303836;
 $color9: #ffcc33;
 $color11: #fc773c;
+
 $color13: #ef3528;
+$color13a: #ffb260;
+
 $color14: #185f79;
+$color15: #06f;
+
+$color16a: #ff7f13;
+$color16b: #ffb260;
+
+$color17a: #747877;
+$color17b: #a2a5a5;
+
+$cartextcolor: #00ccff;
