--- a/src/partials/car.html
+++ b/src/partials/car.html
@@ -1,16 +1,19 @@
-<article class="cars_box">
-  <div class="media-object cars_box_img">
-    <div class="responsive car">
-      <img src="{{imageUrl}}" title="car-rental-website-cheverolet-aveo" />
-    </div>
+<article class="media-object cars_box">
+  <div class="media-object-section">
+    <img
+      class="cars_box_img"
+      src="{{imageUrl}}"
+      title="car-rental-website-cheverolet-aveo"
+    />
   </div>
 
-  <div class="media-object cars_box_txt">
-    <p>{{type}}</p>
-    <p>{{name}}</p>
-    <p>{{text}}</p>
-
-    <div class="media-object-section car-icons-box">
+  <div class="media-object-section">
+    <div class="cars_box_txt">
+      <p>{{type}}</p>
+      <p>{{name}}</p>
+      <p>{{text}}</p>
+    </div>
+    <div class="car-icons-box">
       <figure class="car-icons">
         <img
           src="assets/img/car-rental-website-passengers-large.png"
@@ -37,9 +40,9 @@
       </figure>
       <br />
     </div>
+
     <p></p>
-    <figure class="carsbutton">
-      <a href="#">Continue &rsaquo;</a>
-    </figure>
+
+    <a href="#" class="carsbutton">Continue &rsaquo;</a>
   </div>
 </article>
