--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,10 +20,7 @@
         </div>
 
         <nav id="primary_nav">
-          <ul
-            class="vertical medium-horizontal menu"
-            data-animate="hinge-in-from-top spin-out"
-          >
+          <ul class="vertical medium-horizontal menu">
             <li class="active">
               <a href="index.html" title="car-rental-home-page">Home</a>
             </li>
