--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4141,6 +4141,8 @@ html[xmlns] .clearfix {
         }
         p {
           font-size: 0.9em;
+          line-height: 25px;
+          width: 75%;
         }
       }
     }
@@ -4705,9 +4707,10 @@ html[xmlns] .clearfix {
       figcaption.bannertext {
         p:first-of-type {
           font-size: 2.6em;
+          width: 68%;
         }
         p {
-          font-size: 0.8em;
+          font-size: 0.9em;
         }
       }
     }
@@ -5264,7 +5267,7 @@ html[xmlns] .clearfix {
           font-size: 2.5em;
         }
         p {
-          font-size: 0.75em;
+          font-size: 0.9em;
         }
       }
     }
@@ -5827,9 +5830,10 @@ html[xmlns] .clearfix {
       figcaption.bannertext {
         p:first-of-type {
           font-size: 2.4em;
+          line-height: 45px;
         }
         p {
-          font-size: 0.75em;
+          font-size: 0.9em;
         }
       }
     }
@@ -6381,7 +6385,7 @@ html[xmlns] .clearfix {
           font-size: 2.3em;
         }
         p {
-          font-size: 0.75em;
+          font-size: 0.9em;
           width: 50%;
         }
       }
@@ -6921,9 +6925,11 @@ html[xmlns] .clearfix {
       figcaption.bannertext {
         p:first-of-type {
           font-size: 2.2em;
+          line-height: 40px;
+          width: 75%;
         }
         p {
-          font-size: 0.75em;
+          font-size: 0.85em;
         }
       }
     }
@@ -7481,7 +7487,8 @@ html[xmlns] .clearfix {
           font-size: 2.1em;
         }
         p {
-          font-size: 0.7em;
+          font-size: 0.85em;
+          width: 85%;
         }
       }
     }
@@ -8044,7 +8051,7 @@ html[xmlns] .clearfix {
           font-size: 2.1em;
         }
         p {
-          font-size: 0.7em;
+          font-size: 0.85em;
         }
       }
     }
@@ -8180,7 +8187,7 @@ html[xmlns] .clearfix {
               width: auto;
             }
             h4 {
-              font-size: 15em;
+              font-size: 1em;
             }
 
             p.special_text {
@@ -8595,7 +8602,7 @@ html[xmlns] .clearfix {
           font-size: 2em;
         }
         p {
-          font-size: 0.7em;
+          font-size: 0.85em;
         }
       }
     }
