--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,11 @@
           </ul>
         </div>
 
-        <nav id="primary_nav">
+        <nav
+          id="primary_nav"
+          data-toggler
+          data-animate="slide-in-down slide-out-up"
+        >
           <ul class="vertical medium-horizontal menu">
             <li class="active">
               <a href="index.html" title="car-rental-home-page">Home</a>
